--- a/views/pages/partials/footer.ejs
+++ b/views/pages/partials/footer.ejs
@@ -10,7 +10,7 @@
         </div>
         <div class="flex flex-col items-center justify-center gap-5">
             <div class="flex items-center justify-center gap-5">
-                <p class='text-gray-500'>Privacy policy</p>
+                <a href="/terms" class='text-gray-500'>Terms of service</a>
                 <p class="text-gray-500">&copy 2021 Blockshi</p>
             </div>
             <a class="mx-auto w-full startBtn2"><p class="dlbtn text-center p-4 rounded-full">Get Started</p></a>
