--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -41,7 +41,7 @@
                         <label for="referrer" class="font-semibold text-lg text-gray-200">Referrer Username (Optional)</label>
                         <input type="text" name="referrer" placeholder="Referrer Username" class="outline-none rounded-md w-[95%] max-w-[600px] p-2 border border-green-700 bg-transparent referr">
                     </div>
-                    <p class="text-gray-500 text-xs text-center">By registering you agree to the NairaCity <a href="/terms">terms and services </a> </p>
+                    <p class="text-gray-500 text-xs text-center">By registering you agree to the NairaCity <a href="/terms" class="text-green-500 border-b border-green-500">terms and services </a> </p>
                     <button type="submit" class="greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 block mx-auto submit">Register</button>
                 </form>
                 <p class="text-gray-200 mt-10 text-md text-center opacity-70">Already a Member? <a href="login" class="text-green-500 border-b border-green-500">Login</a></p>
