--- a/views/pages/partials/navbar.ejs
+++ b/views/pages/partials/navbar.ejs
@@ -5,7 +5,7 @@
     <script>
         const user = localStorage.getItem("user");
 
-        if (user && (window.location.href === '/register')) {
+        if (user && (window.location.href.includes('register'))) {
             window.location.href = '/dashboard'
         }
     </script>
